--- a/_data/hosts.yml
+++ b/_data/hosts.yml
@@ -1631,7 +1631,7 @@
             semver: 7.0.19
     last_scanned_at: '2017-06-01T20:05:52+0000'
 -
-    name: names.co.uk
+    name: Names.co.uk
     url: 'https://www.awin1.com/awclick.php?mid=897&id=253713'
     type: shared
     default: 56
@@ -1643,24 +1643,29 @@
             semver: 5.5.38
         56:
             phpinfo: 'http://phpinfo56.hosts.co.uk/'
-            patch: 31
-            version: 5.6.31
-            semver: 5.6.31
+            patch: 38
+            version: 5.6.38
+            semver: 5.6.38
         70:
             phpinfo: 'http://phpinfo70.hosts.co.uk/'
-            patch: 23
-            version: 7.0.23
-            semver: 7.0.23
+            patch: 32
+            version: 7.0.32
+            semver: 7.0.32
         71:
             phpinfo: 'http://phpinfo71.hosts.co.uk/'
-            patch: 9
-            version: 7.1.9
-            semver: 7.1.9
+            patch: 23
+            version: 7.1.23
+            semver: 7.1.23
         72:
             phpinfo: 'http://phpinfo72.hosts.co.uk/'
+            patch: 11
+            version: 7.2.11
+            semver: 7.2.11
+        73:
+            phpinfo: 'http://phpinfo73.hosts.co.uk/'
             patch: 0
-            version: 7.2.0RC2
-            semver: 7.2.0
+            version: 7.3.0RC4
+            semver: 7.3.0RC4
     last_scanned_at: '2017-06-01T20:05:57+0000'
 -
     name: NearlyFreeSpeech.NET
@@ -1999,24 +2004,29 @@
             semver: 5.5.38
         56:
             phpinfo: 'http://phpinfo56.register365.com/'
-            patch: 31
-            version: 5.6.31
-            semver: 5.6.31
+            patch: 38
+            version: 5.6.38
+            semver: 5.6.38
         70:
             phpinfo: 'http://phpinfo70.register365.com/'
-            patch: 23
-            version: 7.0.23
-            semver: 7.0.23
+            patch: 32
+            version: 7.0.32
+            semver: 7.0.32
         71:
             phpinfo: 'http://phpinfo71.register365.com/'
-            patch: 9
-            version: 7.1.9
-            semver: 7.1.9
+            patch: 23
+            version: 7.1.23
+            semver: 7.1.23
         72:
             phpinfo: 'http://phpinfo72.register365.com/'
+            patch: 11
+            version: 7.2.11
+            semver: 7.2.11
+        73:
+            phpinfo: 'http://phpinfo73.register365.com/'
             patch: 0
-            version: 7.2.0RC2
-            semver: 7.2.0
+            version: 7.3.0RC4
+            semver: 7.3.0RC4
     last_scanned_at: '2017-06-01T20:06:28+0000'
 -
     name: 'Relentless Hosting'
